--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
@@ -84,11 +84,9 @@
             <ListView
                 android:id="@+id/home_list1"
                 android:layout_width="0dp"
-                android:layout_height="1000dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="10dp">
-
-
             </ListView>
 
 <!--            <ListView-->
