--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
@@ -3,8 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="5dp"
-    android:background="#fff">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    android:background="#fff"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/home_list_itemicon"
@@ -20,7 +23,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:id="@+id/home_list_detail"
+            android:id="@+id/home_list_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
@@ -32,6 +35,7 @@
 
 
         <TextView
+            android:id="@+id/home_list_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="整套·1居1床2人·地理位置优越"
@@ -42,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -52,17 +57,32 @@
                 android:textStyle="bold"
                 android:textSize="22sp"
                 android:text="￥653"
+
                 android:textColor="#1E90FF"
                 ></TextView>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:text="/晚"
                 android:textColor="#1E90FF"
+                android:layout_marginBottom="10dp"
                 ></TextView>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:textColor="#ffffff"
+            android:background="#1E90FF"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="查看详情"
+            android:layout_marginRight="15dp"
+            android:maxLines="1"
 
+            ></Button>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
