--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
@@ -120,6 +120,20 @@
         android:textSize="20sp"
 
         ></Button>
+    <Button
+        android:id="@+id/userpage_manageMyHotel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="管理我的民宿"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:visibility="invisible"
+        android:textSize="20sp"
+
+        ></Button>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
