--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
@@ -70,19 +70,19 @@
                 android:textColor="#1E90FF"
                 android:layout_marginBottom="10dp"
                 ></TextView>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:textColor="#ffffff"
-            android:background="#1E90FF"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:text="查看详情"
-            android:layout_marginRight="15dp"
-            android:maxLines="1"
+<!--        <Button-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="2"-->
+<!--            android:textColor="#ffffff"-->
+<!--            android:background="#1E90FF"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textSize="20sp"-->
+<!--            android:text="查看详情"-->
+<!--            android:layout_marginRight="15dp"-->
+<!--            android:maxLines="1"-->
 
-            ></Button>
+<!--            ></Button>-->
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
