--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_hotelpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_hotelpage.xml
@@ -23,6 +23,7 @@
         android:orientation="vertical"
         >
         <ImageView
+            android:id="@+id/hotelpagr_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/beach"
@@ -60,7 +61,7 @@
             android:background="#fff"
             android:layout_marginBottom="10dp">
         <TextView
-            android:id="@+id/hotelname"
+            android:id="@+id/hotelpage_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="现代轻奢loft复式3卧 恒生万鹏广场"
@@ -76,6 +77,7 @@
             android:layout_marginLeft="10dp"
             >
             <TextView
+                android:id="@+id/hotelpage_leixing"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#FFE4C4"
@@ -88,6 +90,7 @@
                 android:textColor="#FF8C00"
                 ></TextView>
             <TextView
+                android:id="@+id/hotelpage_huxing"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#FFE4C4"
@@ -101,6 +104,7 @@
                 ></TextView>
 
             <TextView
+                android:id="@+id/hotelpage_fengge"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#FFE4C4"
@@ -112,70 +116,90 @@
                 android:paddingLeft="4dp"
                 android:textColor="#FF8C00"
                 ></TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="#FFE4C4"
-                android:text="近地铁"
-                android:layout_marginRight="3dp"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:paddingRight="4dp"
-                android:paddingLeft="4dp"
-                android:textColor="#FF8C00"
-                ></TextView>
+
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="10dp"
-            android:background="#F5F5F5"
-            android:padding="5dp"
-            android:layout_marginBottom="10dp"
-            >
-            <TextView
-                android:id="@+id/hotelscore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4.8"
-                android:textSize="25sp"
-                android:textColor="	#1E90FF"
-                android:textStyle="bold"
-                android:layout_marginLeft="5dp"
-                ></TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/5.0"
-                android:textSize="15sp"
-                android:textColor="	#000"
-                android:textStyle="bold"
-                android:layout_marginLeft="0dp"
-                ></TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="超赞"
-                android:textSize="20sp"
-                android:layout_marginLeft="5dp"
-                android:textColor="#000"
-                android:textStyle="bold"
-                ></TextView>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#00000000"
-                android:textColor="#1E90FF"
-                android:textStyle="bold"
-                android:text="查看点评>"
-                android:textSize="15sp"
-                android:layout_marginLeft="140dp"
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="#F5F5F5"-->
+<!--            android:padding="5dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            >-->
+<!--            <TextView-->
+<!--                android:id="@+id/hotelpage_score"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="4.8"-->
+<!--                android:textSize="25sp"-->
+<!--                android:textColor="	#1E90FF"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginLeft="5dp"-->
+<!--                ></TextView>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="/5.0"-->
+<!--                android:textSize="15sp"-->
+<!--                android:textColor="	#000"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_marginLeft="0dp"-->
+<!--                ></TextView>-->
+<!--            <TextView-->
+<!--                android:id="@+id/hotelpage_pingjia"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="超赞"-->
+<!--                android:textSize="20sp"-->
+<!--                android:layout_marginLeft="5dp"-->
+<!--                android:textColor="#000"-->
+<!--                android:textStyle="bold"-->
+<!--                ></TextView>-->
+<!--            <Button-->
+<!--                android:id="@+id/hotelpage_chakandianping"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="#00000000"-->
+<!--                android:textColor="#1E90FF"-->
+<!--                android:textStyle="bold"-->
+<!--                android:text="查看点评>"-->
+<!--                android:textSize="15sp"-->
+<!--                android:layout_marginLeft="140dp"-->
 
-                ></Button>
+<!--                ></Button>-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="地址:"
+                    android:textSize="25sp"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000">
+
+                </TextView>
+                <TextView
+                    android:id="@+id/hotelpage_address"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:text="金海路2360号"
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000">
+
+                </TextView>
+            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
@@ -212,6 +236,7 @@
                     android:layout_margin="10dp"
                     ></TextView>
                 <TextView
+                    android:id="@+id/hotelpage_jichusheshi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
@@ -231,10 +256,11 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="基础设施"
+                        android:text="爱心设施"
                         android:layout_margin="10dp"
                         ></TextView>
                     <TextView
+                        android:id="@+id/hotelpage_aixinsheshi"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
@@ -269,92 +295,23 @@
                 android:background="#DCDCDC"
                 >
             </View>
-<!--1-->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
-                <ImageView
+                <ListView
+                    android:id="@+id/hotelpage_other_list"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/cyber"
-                    android:adjustViewBounds="true"
-                    ></ImageView>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="浦东核心地段地铁旁3卧复式近会展中心"
-                        android:layout_margin="10dp"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        >
-                    </TextView>
-                    <Button
-                        android:layout_width="70dp"
-                        android:layout_height="30dp"
-                        android:text="查看详情"
-                        android:textColor="#fff"
-                        android:textStyle="bold"
-                        android:background="#1E90FF"
-                        android:layout_gravity="right"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginRight="10dp"
-                        ></Button>
-                </LinearLayout>
+                    android:layout_margin="10dp">
+                </ListView>
             </LinearLayout>
 
 
-<!--2-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/cyber"
-                    android:adjustViewBounds="true"
-                    ></ImageView>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="浦东核心地段地铁旁3卧复式近会展中心"
-                        android:layout_margin="10dp"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        >
-                    </TextView>
-                    <Button
-                        android:layout_width="70dp"
-                        android:layout_height="30dp"
-                        android:text="查看详情"
-                        android:textColor="#fff"
-                        android:textStyle="bold"
-                        android:background="#1E90FF"
-                        android:layout_gravity="right"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginRight="10dp"
-                        ></Button>
-                </LinearLayout>
-            </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
@@ -403,7 +360,7 @@
                 android:orientation="horizontal"
                 >
                 <TextView
-                    android:id="@+id/hotelscore2"
+                    android:id="@+id/hotelpage_score2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.8"
@@ -422,6 +379,7 @@
                     ></TextView>
 
                 <TextView
+                    android:id="@+id/hotelpage_pingjia2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="超赞"
@@ -451,6 +409,7 @@
                    android:text="如实描述"
                    android:layout_marginLeft="10dp"></TextView>
                    <TextView
+                       android:id="@+id/rushimiaoshu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
@@ -464,6 +423,7 @@
                        android:text="服务周到"
                        android:layout_marginLeft="10dp"></TextView>
                    <TextView
+                       android:id="@+id/fuwuzhoudao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
@@ -483,6 +443,7 @@
                            android:text="位置便利 "
                            android:layout_marginLeft="10dp"></TextView>
                        <TextView
+                           android:id="@+id/weizhibianli"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
@@ -496,6 +457,7 @@
                            android:text="干净卫生"
                            android:layout_marginLeft="10dp"></TextView>
                        <TextView
+                           android:id="@+id/ganjingweisheng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
@@ -514,6 +476,7 @@
                            android:text="高性价比"
                            android:layout_marginLeft="10dp"></TextView>
                        <TextView
+                           android:id="@+id/gaoxingjiabi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
@@ -527,6 +490,7 @@
                            android:text="入住便捷"
                            android:layout_marginLeft="10dp"></TextView>
                        <TextView
+                           android:id="@+id/ruzhubianjie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
@@ -553,6 +517,7 @@
                     android:orientation="horizontal"
                     >
                     <ImageView
+                        android:id="@+id/hotelpage_avatar"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:src="@drawable/avatar"
@@ -565,6 +530,7 @@
                         android:orientation="vertical"
                         android:layout_margin="10dp">
                     <TextView
+                        android:id="@+id/hotelpage_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="clk111"
@@ -573,6 +539,7 @@
 
                         ></TextView>
                     <TextView
+                        android:id="@+id/hotelpage_ruzhuriqi"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="xxxx-xx-xx入住"
@@ -580,6 +547,7 @@
                         ></TextView>
 
                         <TextView
+                            android:id="@+id/hotelpage_pinglun"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="房子很好，孩子很喜欢，下次还会来1111111111111111111111111111111111111111111111"
@@ -590,6 +558,7 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/hotelpage_btn_quanbupinglun"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
